--- a/static/index.html
+++ b/static/index.html
@@ -65,5 +65,6 @@
     </body>
 </html>
 
+<script src="/js/recipe.js"></script>
 <script src="/js/item.js"></script>
 <script src="/js/index.js"></script>
