--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,11 @@
 		    	<button class="action-btn" id="rest">休息</button>
 	    	</div>
 	    	<div class="scene">
+		    	<div class="dialog">
+		    		<table>
+		    			<tr><td id="dialog-text"></td></tr>
+		    		</table>
+		    	</div>
 	    		<div class="sky-filter morning"></div>
 		    	<div class="avatar"><img src="/image/pcman.gif"/></div>
 	    		<div class="land"></div>
@@ -59,8 +64,7 @@
 		    <div class="items" id="inventory"></div>
     	</div>
     	<div class="log">
-	    	<div id="history">
-	    	</div>
+	    	<div id="history"></div>
     	</div>
     </body>
 </html>
