add make list ui

--- a/static/index.html
+++ b/static/index.html
@@ -60,12 +60,15 @@
 		    	<div class="avatar"><img src="/image/pcman.gif"/></div>
 	    		<div class="land"></div>
 	    	</div>
-	    	物品欄
+	    	工具
+		    <div class="items" id="tool"></div>
+	    	資源
 		    <div class="items" id="inventory"></div>
     	</div>
     	<div class="log">
 	    	<div id="history"></div>
     	</div>
+    	<div id="makelist"></div>
     </body>
 </html>
 
