update encounter cost

--- a/static/index.html
+++ b/static/index.html
@@ -46,9 +46,9 @@
 		    	</div>
 		    </div>
     	</div>
-    	<div class="log">
+<!--     	<div class="log">
 	    	<div id="history"></div>
-    	</div>
+    	</div> -->
     	<div id="makelist"></div>
     </body>
 </html>
