add making flow

--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,7 @@
 	    		<div>
 			    	<button class="action-btn" id="start-btn">ＧＯ</button>
 			    	<button class="action-btn" id="inventory-btn">資源</button>
+			    	<button class="action-btn" id="make-btn">製造</button>
 			    	<button class="action-btn" id="log-btn">日誌</button>
 			    </div>
 	    	</div>
@@ -46,13 +47,9 @@
 		    	</div>
 		    </div>
     	</div>
-<!--     	<div class="log">
-	    	<div id="history"></div>
-    	</div> -->
     	<div id="makelist"></div>
     </body>
 </html>
-
 <script src="/js/item.js"></script>
 <script src="/js/recipe.js"></script>
 <script src="/js/encounter.js"></script>
